; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_volumes.c_set_balance_control.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_volumes.c_set_balance_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_balance_control = type { %struct.btrfs_fs_info* }
%struct.btrfs_fs_info = type { i32, %struct.btrfs_balance_control* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfs_balance_control*)* @set_balance_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_balance_control(%struct.btrfs_balance_control* %0) #0 {
  %2 = alloca %struct.btrfs_balance_control*, align 8
  %3 = alloca %struct.btrfs_fs_info*, align 8
  store %struct.btrfs_balance_control* %0, %struct.btrfs_balance_control** %2, align 8
  %4 = load %struct.btrfs_balance_control*, %struct.btrfs_balance_control** %2, align 8
  %5 = getelementptr inbounds %struct.btrfs_balance_control, %struct.btrfs_balance_control* %4, i32 0, i32 0
  %6 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %5, align 8
  store %struct.btrfs_fs_info* %6, %struct.btrfs_fs_info** %3, align 8
  %7 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %3, align 8
  %8 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %7, i32 0, i32 1
  %9 = load %struct.btrfs_balance_control*, %struct.btrfs_balance_control** %8, align 8
  %10 = call i32 @BUG_ON(%struct.btrfs_balance_control* %9)
  %11 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %3, align 8
  %12 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %11, i32 0, i32 0
  %13 = call i32 @spin_lock(i32* %12)
  %14 = load %struct.btrfs_balance_control*, %struct.btrfs_balance_control** %2, align 8
  %15 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %3, align 8
  %16 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %15, i32 0, i32 1
  store %struct.btrfs_balance_control* %14, %struct.btrfs_balance_control** %16, align 8
  %17 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %3, align 8
  %18 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %17, i32 0, i32 0
  %19 = call i32 @spin_unlock(i32* %18)
  ret void
}

declare dso_local i32 @BUG_ON(%struct.btrfs_balance_control*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
